--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=movies
+spring.data.mongodb.database=movies-api-db
+spring.data.mongodb.uri=mongodb+srv://sampaiobale:eoH5SBqh3UNehxFR@cluster0.ttjxlu1.mongodb.net/
